fix: blocked automatic Dark Mode

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,6 +4,7 @@
 
 body {
   overflow-x: hidden;
+  color-scheme: only light;
 }
 
 * {
